# integration-lab

./: .gitignore  README.md  WORKSPACE.bazel  def.bzl
.github/ISSUE_TEMPLATE/: 1-feature-input-form.yml  1-help-input-form.yml  2-help-input-form.yml  feature-input-form.yml  help-input-form.yml
containers/: BUILD.bazel  cli.go  deps.bzl  go.mod  go.sum
containers/commands/: BUILD.bazel  box.go  package.go
containers/common/: BUILD.bazel  build.go  builderfile.go  package.go
containers/images/: BUILD.bazel  hellowrold.go  package.go  shared.go
private/: maven_dep.bzl  utils.bzl
